Исправил замечания наставника

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "webpack-dev-server",
     "test": "npm run eslint && npm run test.jest",
     "test.jest": "jest",
-    "update.jest": "jest -u"
+    "update.jest": "jest -u",
+    "watch.jest": "jest --watch"
   },
   "devDependencies": {
     "@babel/core": "7.10.2",
