--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-loader-spinner": "3.1.14",
     "react-redux": "7.2.0",
     "react-router-dom": "5.2.0",
     "react-spinners": "0.9.0",
