--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,18 @@ node_js:
 
 notifications:
   email: false
+
+cache:
+  directories:
+    - node_modules
+
+script:
+  npm run build
+
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github-token: $wtw
+  local_dir: public
+  on:
+    branch: master
